# h1_mujoco

./: .gitignore  .gitmodules  LICENSE  README.md  annotate.py  augment.py  dedupe.py  environment.yml  h12_mujoco.py  h12_skin.py  h1_2_mujoco.py  h1_2_robosuite.py  h1_mujoco.py  magpie_hand_bridge.py  measurement_bridge.py  mink_interface.py  mujoco_env.py  mujoco_interface.py  mujoco_ros_bridge.py  pv_interface.py  pyproject.toml  replay.py  requirements.txt  ros_bridge.py  scene_builder.py  sim_names.py  test_spawn_collision.py  unitree_h1_2_interface.py  unitree_interface.py  unitree_sdk_interface.py
archive/: h12_skin.py  h1_mujoco.py  unitree_h1_interface.py
augmented/: AUG_00_episode_0001_1764627317.csv  AUG_00_episode_0001_1764627957.csv  AUG_00_episode_0001_1764628712.csv  AUG_00_episode_0002_1764628457.csv  AUG_00_episode_0003_1764618341.csv  AUG_00_episode_0004_1764618360.csv  AUG_00_episode_0004_1764628029.csv  AUG_00_episode_0004_1764628496.csv  AUG_00_episode_0004_1764628749.csv  AUG_00_episode_0005_1764618371.csv  AUG_00_episode_0005_1764628041.csv  AUG_00_episode_0005_1764628503.csv  AUG_00_episode_0006_1764630338.csv  AUG_00_episode_0007_1764628514.csv  AUG_00_episode_0007_1764630345.csv  AUG_00_episode_0008_1764630355.csv  AUG_00_episode_0008_1764708543.csv  AUG_00_episode_0009_1764618444.csv  AUG_00_episode_0009_1764628808.csv  AUG_00_episode_0013_1764628871.csv  AUG_00_episode_0016_1764708680.csv  AUG_00_episode_0017_1764628939.csv  AUG_00_episode_0018_1764628951.csv  AUG_00_episode_0019_1764628973.csv  AUG_00_episode_0020_1764628985.csv  (+1637 more)
(+190 files in other folders)
