[project]
name = "h1-mujoco"
version = "0.1.0"
description = "MuJoCo simulation for the H1_2 robot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "mink>=1.1.0",
    "mujoco>=3.6.0",
    "numpy>=2.2.6",
    "pygame>=2.6.1",
    "pyquaternion>=0.9.9",
    "pyvista>=0.47.1",
    "robot-descriptions>=1.23.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
    "unitree-sdk2py",
]

[tool.uv.workspace]
members = [
    "submodules/unitree_sdk2_python",
]

[tool.uv.sources]
unitree-sdk2py = { workspace = true, editable = true }
